--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,5 @@ github:
 pages_list:       
   Archive: '/archive'
   Feed: '/atom.xml'
-  Web: 'http://cesarvelandia.com'
+  Web: 'cesarvelandia.com'
 	
