--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ github:
   repo:           https://github.com/cesarvelandia/cesarvelandia.github.io
 
 pages_list:       
+  About: '/about'
   Archive: '/archive'
   Feed: '/atom.xml'
-  Web: 'cesarvelandia.com'
 	
