--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ relative_permalinks: true
 
 # Setup
 title:            Cesar D. Velandia
-tagline:          A Jekyll-powered online notebook
+tagline:          http://cesarvelandia.github.io
 url:              http://cesarvelandia.github.io
 paginate:         3
 baseurl:          /
 author:
   name:           Cesar Velandia
   url:            https://twitter.com/cesardvelandia
-  email:          c@cesarvelandia.com
+  email:          cesar@velandia.com
 
 # Custom vars
 version:          1.0.0
